Revision history for {{ $dist->name }}

{{$NEXT}}
  [Documentation]
  - Documented security considerations.

  [Tests]
  - Added more author tests

  [Other]
  - Dist::Zilla::Plugin::Generate::ManifestSkip is no longer used.

v0.4.0    2024-12-17 16:58:27+00:00 Europe/London
  [Enhancements]
  - The nonce is longer and contains mixed-case letters and numbers.

  [Incompatabilities]
  - The nonce_seed_size attribute was removed.

  [Documentation]
  - Documented the support for older Perl versions.

  - Added a security policy (`SECURITY.md`) to the distribution.

  - Updated copyright year.

v0.3.4    2023-11-07 13:09:44+00:00 Europe/London
  [Tests]
  - Removed unnecessary prerequisite.

  - Added author tests for Changes.

v0.3.3    2023-10-28 10:01:10+01:00 Europe/London
  [Tests]
  - Migrated to Test2.

  - Removed use of Test::Most.

  - Enable "use strict" Kwalitee test.

v0.3.2    2023-06-14 15:32:22+01:00 Europe/London
  [Documentation]
  - Fixed typo in SYNOPSIS.

v0.3.1    2023-05-11 10:48:19+01:00 Europe/London
  [Bug Fixes]
  - Rebuild distribution with fixed SIGNATURE.

v0.3.0    2023-05-10 16:39:08+01:00 Europe/London
  [Enhancments]
  - Use Crypt::URandom to seed the RNG.

  - Add nonce_seed_size attribute to alter the seed size.

  - Recommend prerequisite Ref::Util::XS.

  [Other]
  - Use Types::Common over Types::Standard.

v0.2.1    2023-01-11 14:43:34+00:00 Europe/London
  No Changes from v0.2.0.

v0.2.0    2023-01-10 09:24:16+00:00 Europe/London (TRIAL RELEASE)
  [Incompatible Changes]
  - Minimum Perl version is v5.14.

  [Documentation]
  - Add note that the source and format of the nonce may change in the future.

  - Documented support for older Perl versions.

  - Bumped copyright year.

  [Other]
  - Added GitHub Actions to run tests.

v0.1.4    2022-07-05 12:08:50+01:00 Europe/London
  [Documentation]
  - Fix typo in Changes.

v0.1.3    2022-06-29 17:16:15+01:00 Europe/London
  [Enhancements]