@@ -308,4 +308,9 @@ L<HTTP::SecureHeaders>
 
 L<Plack::Middleware::CSP>
 
+=head2 Reporting Security Vulnerabilities
+
+Security issues should not be reported on the bugtracker website.  Please see F<SECURITY.md> for instructions how to
+report security vulnerabilities
+
 =cut
